crates/gridwell-writer-quarto/tests/snapshots/snapshots__two-row-groups.snap
---
source: crates/gridwell-writer-quarto/tests/snapshots.rs
expression: out
---
{
  "c": [
    [
      "",
      [
        "quarto-table",
        "cell-output-display"
      ],
      []
    ],
    [
      {
        "c": [
          [
            "",
            [],
            []
          ],
          [
            null,
            []
          ],
          [
            [
              {
                "t": "AlignLeft"
              },
              {
                "t": "ColWidthDefault"
              }
            ],
            [
              {
                "t": "AlignLeft"
              },
              {
                "t": "ColWidthDefault"
              }
            ]
          ],
          [
            [
              "",
              [],
              []
            ],
            [
              [
                [
                  "",
                  [],
                  []
                ],
                [
                  [
                    [
                      "",
                      [],
                      []
                    ],
                    {
                      "t": "AlignDefault"
                    },
                    1,
                    1,
                    [
                      {
                        "c": [
                          {
                            "c": "Country",
                            "t": "Str"
                          }
                        ],
                        "t": "Plain"
                      }
                    ]
                  ],
                  [
                    [
                      "",
                      [],
                      []
                    ],
                    {
                      "t": "AlignDefault"
                    },
                    1,
                    1,
                    [
                      {
                        "c": [
                          {
                            "c": "Value",
                            "t": "Str"
                          }
                        ],
                        "t": "Plain"
                      }
                    ]
                  ]
                ]
              ]
            ]
          ],
          [
            [
              [
                "",
                [],
                []
              ],
              1,
              [
                [
                  [
                    "",
                    [],
                    []
                  ],
                  [
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      2,
                      [
                        {
                          "c": [
                            {
                              "c": "North",
                              "t": "Str"
                            },
                            {
                              "t": "Space"
                            },
                            {
                              "c": "America",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ]
                  ]
                ]
              ],
              [
                [
                  [
                    "",
                    [],
                    []
                  ],
                  [
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "USA",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ],
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "1250",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ]
                  ]
                ],
                [
                  [
                    "",
                    [],
                    []
                  ],
                  [
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "Canada",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ],
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "420",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ]
                  ]
                ]
              ]
            ],
            [
              [
                "",
                [],
                []
              ],
              1,
              [
                [
                  [
                    "",
                    [],
                    []
                  ],
                  [
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      2,
                      [
                        {
                          "c": [
                            {
                              "c": "Europe",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ]
                  ]
                ]
              ],
              [
                [
                  [
                    "",
                    [],
                    []
                  ],
                  [
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "Germany",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ],
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "890",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ]
                  ]
                ],
                [
                  [
                    "",
                    [],
                    []
                  ],
                  [
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "France",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ],
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "610",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ]
                  ]
                ]
              ]
            ]
          ],
          [
            [
              "",
              [],
              []
            ],
            []
          ]
        ],
        "t": "Table"
      }
    ]
  ],
  "t": "Div"
}
